added filter functionality

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -23,7 +23,7 @@
 
 .card-container{
     /* background-color: rgb(165, 38, 81) !important; */
-    margin-top: 20px !important;
+    /* margin-top: 20px !important; */
     margin-bottom: 100px !important;
     display: flex;
     flex-direction: row;
