--- a/views/listings/editform.ejs
+++ b/views/listings/editform.ejs
@@ -56,7 +56,7 @@
     <option value="Hostel" <%= a.category === 'Hostel' ? 'selected' : '' %>>Hostel</option>
     <option value="Hotel" <%= a.category === 'Hotel' ? 'selected' : '' %>>Hotel</option>
     <option value="Resort" <%= a.category === 'Resort' ? 'selected' : '' %>>Resort</option>
-    <option value="Villas" <%= a.category === 'Villas' ? 'selected' : '' %>>Villas</option>
+    <option value="Villa" <%= a.category === 'Villa' ? 'selected' : '' %>>Villa</option>
     <option value="Deserts" <%= a.category === 'Deserts' ? 'selected' : '' %>>Deserts</option>
     <option value="Domes" <%= a.category === 'Domes' ? 'selected' : '' %>>Domes</option>
     <option value="Creative spaces" <%= a.category === 'Creative spaces' ? 'selected' : '' %>>Creative spaces</option>
