--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -15,7 +15,7 @@
         <input type="password" name="password" id="password" required class="form-control"/>
       </div>  
 
-    <button class="add-btn" type="submit">SIGN UP</button>
+    <button class="add-btn" type="submit">Log in</button>
   </form>
 </div>
 </body>
