--- a/views/listings/newform.ejs
+++ b/views/listings/newform.ejs
@@ -29,7 +29,7 @@
     <option value="Hostel">Hostel</option>
     <option value="Hotel">Hotel</option>
     <option value="Resort">Resort</option>
-    <option value="Villas">Villas</option>
+    <option value="Villa">Villa</option>
     <option value="Deserts">Deserts</option>
     <option value="Domes">Domes</option>
     <option value="Creative spaces">Creative spaces</option>
