added filter functionality

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,17 +1,17 @@
 <footer class="footer">
     <div class="fotter-info d-flex flex-column justify-content-center align-items-center">
         <div class="footer-info-social fs-2 d-flex w-100 justify-content-center">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+         <a href="https://github.com/kavyarajput30" target="_blank"><i class="fa-brands fa-square-facebook text-bg-light"></i></a>   
+           <a href="https://github.com/kavyarajput30/AirBnB" target="_blank"> <i class="fa-brands fa-square-instagram text-bg-light"></i> </a>
+           <a href="https://www.linkedin.com/in/kavyarajput30/" target="_blank"> <i class="fa-brands fa-linkedin text-bg-light"></i></a>
         </div>
         <div >
            &copy Kavya Hotels and Travels
 
         </div>
         <div class="footer-info-links">
-          <a href="/">Privacy</a>
-          <a href="/">Terms</a>
+          <a >Privacy</a>
+          <a >Terms</a>
         </div>
     </div>
 </footer>
